[workspace]
members = [
    "crates/rasterize-text", 
    "crates/rasterize-text-cli"
, "crates/svg-test"]
resolver = "2"

[workspace.dependencies]
color-eyre = { version = "0.6.3",  default-features = false }
env_logger = { version = "0.11.5", default-features = false }
log        = { version = "0.4.22", default-features = false }
