[package]
name = "rasterize-string"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6.3", default-features = false}
image      = { version = "0.25.2", default-features = false, features = ['png'] }
env_logger = { version = "0.11.5", default-features = false}
log        = { version = "0.4.22", default-features = false}
rusttype   = { version = "0.9.3", default-features=false, features=['std']}

